# eudi-lib-podofo

./: .gitignore  CMakeLists.txt  Package.swift  README.md
.github/workflows/: build-android-podofo.yaml  build-brotli.yaml  build-bzip2.yaml  build-freetype.yaml  build-ios-podofo.yaml  build-libpng.yaml  build-libxml2.yaml  build-openssl.yaml  build-podofo.yaml  release-android-podofo.yaml
docs/: signing_architecture.md
examples/: CMakeLists.txt
examples/PoDoFo-Tester-App/: CMakeLists.txt
examples/PoDoFo-Tester-App/core/: Config.cpp  Config.h  Logger.cpp  Logger.h  PoDoFo-App.cpp
examples/PoDoFo-Tester-App/models/: AuthorizationDetails.cpp  AuthorizationDetails.h  CertificateBundle.h  SignatureSession.h
examples/PoDoFo-Tester-App/services/auth/: AuthCredService.cpp  AuthCredService.h  AuthService.cpp  AuthService.h  LoginService.cpp  LoginService.h  TokenCredService.cpp  TokenCredService.h  TokenService.cpp  TokenService.h
examples/PoDoFo-Tester-App/services/certificates/: CertificateHttpService.cpp  CertificateHttpService.h  ExtractIssuerCertFromTSR.cpp  ExtractIssuerCertFromTSR.h  ExtractSignerCertFromTSR.cpp  ExtractSignerCertFromTSR.h  GetCredentials.cpp  GetCredentials.h  GetCrlFromCertificate.cpp  GetCrlFromCertificate.h  GetOCSPFromCertificate.cpp  GetOCSPFromCertificate.h  GetTsrBase64.cpp  GetTsrBase64.h  ListCredentialsService.cpp  ListCredentialsService.h  OCSPHttpService.cpp  OCSPHttpService.h  SaveBase64PEMAsDER.cpp  SaveBase64PEMAsDER.h
examples/PoDoFo-Tester-App/services/signing/: SignHashService.cpp  SignHashService.h  SigningService.cpp  SigningService.h
examples/PoDoFo-Tester-App/services/timestamping/: TimestampHashService.cpp  TimestampHashService.h  TimestampRequestService.cpp  TimestampRequestService.h  TimestampService.cpp  TimestampService.h  TimestampingService.cpp  TimestampingService.h  TsrBase64Service.cpp  TsrBase64Service.h  TsrFromSignedHashService.cpp  TsrFromSignedHashService.h  TsrProcessingService.cpp  TsrProcessingService.h  TsrRequestAndBase64Service.cpp  TsrRequestAndBase64Service.h
examples/PoDoFo-Tester-App/utils/: Utils.cpp  Utils.h
examples/helloworld/: helloworld.cpp
ios-package/: README.md
ios-package/PoDoFo.xcframework/ios-arm64-simulator/PoDoFo.framework/: Info.plist
ios-package/PoDoFo.xcframework/ios-arm64-simulator/PoDoFo.framework/Headers/openssl/: asn1.h  asn1t.h  cmp.h  cms.h  conf.h  core_names.h  crypto.h  ess.h  ocsp.h  opensslv.h  pkcs7.h  safestack.h  srp.h  ui.h
ios-package/PoDoFo.xcframework/ios-arm64/PoDoFo.framework/: Info.plist
ios-package/PoDoFo.xcframework/ios-arm64/PoDoFo.framework/Headers/: PodofoWrapper.h
ios-package/PoDoFo.xcframework/ios-arm64/PoDoFo.framework/Headers/main/: PdfDeclarations.h  PdfRemoteSignDocumentSession.h  PdfSignerCms.h
ios-package/PoDoFo.xcframework/ios-arm64/PoDoFo.framework/Headers/openssl/: bio.h  configuration.h  crmf.h  ct.h  fipskey.h  pkcs12.h  ssl.h  x509.h  x509_vfy.h  x509v3.h
scripts/android/brotli/: build.sh
scripts/android/bzip2/: build.sh
scripts/android/freetype/: build.sh
scripts/android/harfbuzz/: build.sh
scripts/android/libpng/: build.sh
scripts/android/libxml2/: build.sh
scripts/android/openssl/: build.sh
scripts/android/podofo/: build.sh
scripts/android/podofo-aar/: build.sh  organize_libs.sh
scripts/android/zlib/: build.sh
scripts/ios/freetype/: build.sh
scripts/ios/libpng/: build.sh
scripts/ios/libxml2/: build.sh
scripts/ios/openssl/: build.sh
scripts/ios/podofo/: PodofoWrapper.h  PodofoWrapper.mm  build.sh  ios.toolchain.cmake
scripts/ios/zlib/: build.sh
src/android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
src/android/gradle/: libs.versions.toml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/android/src/main/java/com/podofo/android/: PoDoFoException.java  PoDoFoWrapper.java
src/podofo/main/: HelloWorld.cpp  PdfRemoteSignDocumentSession.cpp  PdfRemoteSignDocumentSession.h  PdfSignerCms.cpp  PdfSignerCms.h
src/podofo/private/: CmsContext.cpp  CmsContext.h  PdfDeclarationsPrivate.cpp
src/wrapper/: CMakeLists.txt  podofo_jni.cpp  podofo_jni.h
